--- a/SQL-Introduction/package.json
+++ b/SQL-Introduction/package.json
@@ -28,6 +28,8 @@
     "body-parser": "^2.2.2",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
-    "pug": "^3.0.3"
+    "mysql2": "^3.16.0",
+    "pug": "^3.0.3",
+    "sequelize": "^6.37.7"
   }
 }
